Added filters for campaign
